Made index.html redirect to the docs/index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-doc/index.html
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+  <head>
+    <meta http-equiv="refresh" content="0; url=http://blogit.katanacode.com/doc/index.html" />
+  </head>
+  <body>
+  </body>
+</html>
